# photon-cuda

./: CMakeLists.txt  README.md  camera.hpp  image2d.hpp  intersect.hpp  line3.hpp  main.cpp  parallelogram.hpp  point3.hpp  render.cu  rgb.hpp  rgba.hpp  sphere.hpp  tga.hpp  uvector3.hpp  vector3.hpp
